Simple-Designs/Bubble-sort/bubble_sort/solution1/csim/report/bubble_sort_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../testbench_v1.cpp in debug mode
   Compiling ../../../../bubble_sort.cpp in debug mode
csim.mk:85: recipe for target 'obj/bubble_sort.o' failed
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:150:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_int.h:10,
                 from ../../../../bubble_sort_v1.hpp:5,
                 from ../../../../testbench_v1.cpp:5:
C:/Xilinx/Vitis_HLS/2023.2/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_int.h:10,
                 from ../../../../bubble_sort_v1.hpp:5,
                 from ../../../../testbench_v1.cpp:5:
C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:142:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:150:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_int.h:10,
                 from ../../../../bubble_sort_v1.hpp:5,
                 from ../../../../bubble_sort.cpp:1:
C:/Xilinx/Vitis_HLS/2023.2/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_int.h:10,
                 from ../../../../bubble_sort_v1.hpp:5,
                 from ../../../../bubble_sort.cpp:1:
C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:142:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
In file included from ../../../../bubble_sort.cpp:1:0:
../../../../bubble_sort_v1.hpp:7:18: error: variable or field 'bubble_sort' declared void
 void bubble_sort(data_t input_arr[input_size]);
                  ^~~~~~
../../../../bubble_sort_v1.hpp:7:18: error: 'data_t' was not declared in this scope
../../../../bubble_sort.cpp:4:18: error: variable or field 'bubble_sort' declared void
 void bubble_sort(data_t input_arr[input_size])
                  ^~~~~~
../../../../bubble_sort.cpp:4:18: error: 'data_t' was not declared in this scope
make: *** [obj/bubble_sort.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
